<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".mqtt.ConnectFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview_pubtopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/topic_text"
        android:hint="@string/topic_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_pubtopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview_pubmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/message_text"
        android:hint="@string/message_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_pubmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/button_publish_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview_subtopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/topic_text"
        android:hint="@string/topic_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_subtopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:text="@string/button_subscribe_text"/>

    <Button
        android:id="@+id/button_unsubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:text="@string/button_unsubscribe_text" />

    <Button
        android:id="@+id/button_clean_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_clean_text"/>

    <Button
        android:id="@+id/button_prefill_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_prefill_text"/>

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_disconnect_text" />

</LinearLayout>